--- a/src/app/layout/layout-main/layout-main.component.html
+++ b/src/app/layout/layout-main/layout-main.component.html
@@ -1,5 +1,5 @@
-<div style="background-color: #2A3642;">
-    <div class="d-flex flex-column">
+<div>
+    <div id="wrapper" class="d-flex flex-column">
         <app-navbar></app-navbar>
         <div class="container-fluid">
             <router-outlet></router-outlet>
