--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,6 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
-      <a class="navbar-brand" href="#">CPMT</a>
+      <a class="navbar-brand" href="#">
+        <img src="ruta-de-tu-imagen.png" alt="Logo CPMT" width="30" height="30">CPMT</a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -8,25 +9,31 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active">
-            <a class="nav-link" href="#">Inicio</a>
+            <a class="nav-link" href="#"><i class="fa fa-home"></i>
+                Inicio</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Productos</a>
+            <a class="nav-link" href="#"><i class="fa fa-tags"></i>
+                Productos</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Contacto</a>
+            <a class="nav-link" href="#"><i class="fa fa-envelope"></i>
+                Contacto</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Actividades</a>
+            <a class="nav-link" href="#"><i class="fa fa-list"></i>
+                Actividades</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">¿Quienes Somos?</a>
+            <a class="nav-link" href="#"><i class="fa fa-users"></i>
+                ¿Quienes Somos?</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="#">Iniciar Sesión</a>
+            <a class="nav-link" href="#"><i class="fa fa-sign-in"></i>
+                Iniciar Sesión</a>
           </li>
           <li class="nav-item">
-            <a href="" class="nav-link" style="color: aqua;"><i class="fa fa-heart"></i>
+            <a href="" class="nav-link"><i class="fa fa-shopping-cart fa-lg"></i>
             </a>
           </li>
         </ul>
