--- a/src/app/layout/layout-main/layout-main.component.html
+++ b/src/app/layout/layout-main/layout-main.component.html
@@ -1,5 +1,5 @@
-<div>
-    <div id="wrapper" class="d-flex flex-column">
+<div  id="wrapper">
+    <div id="content-wrapper" class="d-flex flex-column">
         <app-navbar></app-navbar>
         <div class="container-fluid">
             <router-outlet></router-outlet>
