--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,2 +1,8 @@
 /* You can add global styles to this file, and also import other style files */
+//importaciones del font awesome
 @import "~font-awesome/css/font-awesome.css";
+
+//cursor pointer
+.cursor_pointer {
+    cursor: pointer;
+}
