--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
-<nav class="navbar navbar-expand-lg navbar-light bg-light fixed-top">
+<nav class="navbar navbar-expand-lg navbar-light rojo fixed-top">
     <div class="container">
       <a class="navbar-brand" (click)="home()">
-        <img src="ruta-de-tu-imagen.png" alt="..." width="30" height="30">CPMT</a>
+        <img src="ruta-de-tu-imagen.png" alt="..." width="30" height="30"><span class="blanco">CPMT</span></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
@@ -9,31 +9,31 @@
       <div class="collapse navbar-collapse" id="navbarNav">
         <ul class="navbar-nav ml-auto">
           <li class="nav-item active cursor_pointer">
-            <a class="nav-link" (click)="home()"><i class="fa fa-home"></i>
-                Inicio</a>
+            <a class="nav-link" (click)="home()"><i class="blanco fa fa-home"></i>
+                <span class="blanco"> Incio</span></a>
           </li>
           <li class="nav-item cursor_pointer">
-            <a class="nav-link" (click)="productos()"><i class="fa fa-tags"></i>
-                Productos</a>
+            <a class="nav-link" (click)="productos()"><i class="blanco fa fa-tags"></i>
+                <span class="blanco"> Productos</span></a>
           </li>
           <li class="nav-item cursor_pointer">
-            <a class="nav-link" (click)="contacto()"><i class="fa fa-envelope"></i>
-                Contacto</a>
+            <a class="nav-link" (click)="contacto()"><i class="blanco fa fa-envelope"></i>
+                <span class="blanco"> Contacto</span></a>
           </li>
           <li class="nav-item cursor_pointer">
-            <a class="nav-link" (click)="actividades()"><i class="fa fa-list"></i>
-                Actividades</a>
+            <a class="nav-link" (click)="actividades()"><i class="blanco fa fa-list"></i>
+                <span class="blanco"> Actividades</span></a>
           </li>
           <li class="nav-item cursor_pointer">
-            <a class="nav-link" (click)="quienesSomos()"><i class="fa fa-users"></i>
-                ¿Quienes Somos?</a>
+            <a class="nav-link" (click)="quienesSomos()"><i class="blanco fa fa-users"></i>
+                <span class="blanco"> ¿Quienes Somos?</span></a>
           </li>
           <li class="nav-item cursor_pointer">
-            <a class="nav-link" (click)="login()"><i class="fa fa-sign-in"></i>
-                Iniciar Sesión</a>
+            <a class="nav-link" (click)="login()"><i class="blanco fa fa-sign-in"></i>
+                <span class="blanco"> Iniciar Sesión</span></a>
           </li>
           <li class="nav-item cursor_pointer">
-            <a (click)="carrito()" class="nav-link"><i class="fa fa-shopping-cart fa-lg"></i>
+            <a (click)="carrito()" class="nav-link"><i class="blanco fa fa-shopping-cart fa-lg"></i>
             </a>
           </li>
         </ul>
