--- a/src/app/layout/layout-main/layout-main.component.html
+++ b/src/app/layout/layout-main/layout-main.component.html
@@ -1,8 +1,9 @@
 <div  id="wrapper">
     <div id="content-wrapper" class="d-flex flex-column">
         <app-navbar></app-navbar>
-        <div class="container-fluid">
+        <div class="mt-5 container-fluid">
             <router-outlet></router-outlet>
         </div>
+        <app-footer></app-footer>
     </div>
 </div>
