Login, productos y titulos de las paginas

--- a/src/app/pages/carrito/carrito.component.html
+++ b/src/app/pages/carrito/carrito.component.html
@@ -1,1 +1,40 @@
-<p>carrito works!</p>
+<div class="container">
+    <h1 class="mt-5 mb-4">Carrito de Compras</h1>
+
+    <div class="cart-item">
+        <img src="producto1.jpg" alt="Producto 1" width="100">
+        <div>
+            <h5>Producto 1</h5>
+            <p>Precio: $10.00</p>
+            <p>Cantidad: 2</p>
+        </div>
+        <p>Total: $20.00</p>
+    </div>
+
+    <div class="cart-item">
+        <img src="producto2.jpg" alt="Producto 2" width="100">
+        <div>
+            <h5>Producto 2</h5>
+            <p>Precio: $15.00</p>
+            <p>Cantidad: 1</p>
+        </div>
+        <p>Total: $15.00</p>
+    </div>
+
+    <div class="cart-item">
+        <img src="producto3.jpg" alt="Producto 3" width="100">
+        <div>
+            <h5>Producto 3</h5>
+            <p>Precio: $8.00</p>
+            <p>Cantidad: 3</p>
+        </div>
+        <p>Total: $24.00</p>
+    </div>
+
+    <hr>
+
+    <div class="text-end">
+        <h4>Total del Carrito: $59.00</h4>
+        <button class="btn btn-primary mt-3">Realizar Pago</button>
+    </div>
+</div>
