--- a/src/styles.scss
+++ b/src/styles.scss
@@ -3,7 +3,7 @@
 @import "~font-awesome/css/font-awesome.css";
 
 .rojo {
-    background-color: #AB6969;
+    background-color: rgb(171, 105, 105);
 }
 
 .blanco {
