Avance de paginas

--- a/src/app/pages/home/home.component.html
+++ b/src/app/pages/home/home.component.html
@@ -1,30 +1,72 @@
-<div class="mt-1">
-  <h1 class="text-center">El mayor productor de manzanas orgánicas en Teziutlán</h1>
-</div>
 <div>
-  <div id="carouselExampleFade" class="carousel slide carousel-fade" data-bs-ride="carousel">
+  <div id="carouselExampleCaptions" class="carousel slide" data-bs-ride="carousel">
+    <div class="carousel-indicators">
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="0" class="active" aria-current="true" aria-label="Slide 1"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="1" aria-label="Slide 2"></button>
+      <button type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide-to="2" aria-label="Slide 3"></button>
+    </div>
     <div class="carousel-inner">
       <div class="carousel-item active">
         <img src="../../../assets/img/prueba.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>El mayor productor de manzanas orgánicas en Teziutlán</h5>
+          <p>Some representative placeholder content for the first slide.</p>
+        </div>
       </div>
       <div class="carousel-item">
         <img src="../../../assets/img/prueba2.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Second slide label</h5>
+          <p>Some representative placeholder content for the second slide.</p>
+        </div>
       </div>
       <div class="carousel-item">
-        <img src="../../../assets/img/prueba.jpg" class="d-block w-100" alt="...">
+        <img src="../../../assets/img/prueba2.jpg" class="d-block w-100" alt="...">
+        <div class="carousel-caption d-none d-md-block">
+          <h5>Third slide label</h5>
+          <p>Some representative placeholder content for the third slide.</p>
+        </div>
       </div>
     </div>
-    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="prev">
       <span class="carousel-control-prev-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Previous</span>
     </button>
-    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleCaptions" data-bs-slide="next">
       <span class="carousel-control-next-icon" aria-hidden="true"></span>
       <span class="visually-hidden">Next</span>
     </button>
   </div>
 </div>
-<div class="mb-4">
+<div class="container mt-3 mb-3">
+  <div class="row">
+    <div class="col-12">
+      <h1>Rancho Escondido</h1>
+    </div>
+    <div class="col">
+      <div class="">
+        <img src="../../../assets/img/login-card-1.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <p class="card-text">La historia de Rancho Escondido se remonta a fines del siglo XVIII y ha permanecido en manos de la familia original por más de 130 años. Desde junio de 2020 ha tenido una vocación hacia la producción orgánica y economía sustentable. Recientemente, motivada por las nuevas generaciones, surge la idea de abrirlo para mostrar su funcionamiento y la riqueza cultural, gastronómica, educativa y productiva que se genera a través del trabajo y amor a la tierra.
+
+            El deporte y la aventura también son parte del atractivo de vivir la naturaleza en Rancho Escondido.</p>
+        </div>
+      </div>
+    </div>
+    <div class="col">
+      <div class="">
+        <div class="card-body">
+          <h5 class="card-title">Teziutlán, Puebla</h5>
+          <p class="card-text">
+            En Teziutlán, Puebla se encuentra un lugar hermoso, entrañable e inolvidable donde el canto de las aves, la niebla, el sol y miles de árboles frutales te trasladan a la maravilla de la tierra que es México.</p>
+          <p class="card-text"><small >Si disfrutas de la naturaleza, de la riqueza cultural y gastronómica, de aprender y de realizar actividades al aire libre, Rancho Escondido te ofrece experiencias inolvidables. Ubicado en la localidad de Loma Bonita, Teziutlán, Puebla.</small></p>
+        </div>
+        <img src="../../../assets/img/login-card-3.jpg" class="card-img-bottom" alt="...">
+      </div>
+    </div>
+  </div>
+</div>
+<div class="container mb-4">
   <h1 class="text-center">Beneficios de las manzanas orgánicas</h1>
   <div class="container-fluid">
     <ul class="nav nav-tabs" id="myTab" role="tablist">
