--- a/src/app/pages/productos/productos.component.html
+++ b/src/app/pages/productos/productos.component.html
@@ -1,5 +1,12 @@
-<div class="mt-1">
-  <h1 class="text-center">Productos</h1>
+<div class="container-fluid p-0">
+  <div class="row m-0">
+      <div class="col-12 p-0">
+          <img src="../../../assets/img/largo.webp" class="img-fluid" alt="...">
+          <div class="overlay">
+              <h1 class="text-white text-center">Productos</h1>
+          </div>
+      </div>
+  </div>
 </div>
 <div class="container mb-4">
   <div class="row row-cols-1 row-cols-md-3 g-4">
