--- a/src/app/pages/quienes-somos/quienes-somos.component.html
+++ b/src/app/pages/quienes-somos/quienes-somos.component.html
@@ -1,3 +1,29 @@
-<div class="mt-1">
-    <h1 class="text-center">¿Quienes Somos?</h1>
+<div class="container-fluid p-0">
+    <div class="row m-0">
+        <div class="col-12 p-0">
+            <img src="../../../assets/img/largo.webp" class="img-fluid" alt="...">
+            <div class="overlay">
+                <h1 class="text-white text-center">Quienes Somos?</h1>
+            </div>
+        </div>
+    </div>
   </div>
+<div>
+    <h1 class="text-center">Colectivo de Productores de Teziutlán (CPMT)</h1>
+    <div class="container-fluid m-5">
+        <div class="card mb-3" style="max-width: 540px;">
+            <div class="row g-0">
+              <div class="col-md-4">
+                <img src="..." class="img-fluid rounded-start" alt="...">
+              </div>
+              <div class="col-md-8">
+                <div class="card-body">
+                  <h5 class="card-title">Card title</h5>
+                  <p class="card-text">This is a wider card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+                  <p class="card-text"><small class="text-muted">Last updated 3 mins ago</small></p>
+                </div>
+              </div>
+            </div>
+          </div>
+    </div>
+</div>
