--- a/src/app/components/navbar/navbar.component.html
+++ b/src/app/components/navbar/navbar.component.html
@@ -1,7 +1,7 @@
 <nav class="navbar navbar-expand-lg navbar-light rojo fixed-top">
     <div class="container">
       <a class="navbar-brand" (click)="home()">
-        <img src="ruta-de-tu-imagen.png" alt="..." width="30" height="30"><span class="blanco">CPMT</span></a>
+        <img src="../../../assets/img/logo.jpg" alt="..." width="30" height="30"><span class="blanco">CPMT</span></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
         aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
