--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -1,5 +1,4 @@
-<div class="container">
-
+<div class="container mt-5 mb-4">
     <!-- Outer Row -->
     <div class="row justify-content-center">
 
@@ -25,7 +24,7 @@
                                         <input type="password" class="form-control form-control-user"
                                             id="exampleInputPassword" placeholder="Password">
                                     </div>
-                                    <a href="index.html" class="btn btn-primary btn-user btn-block">
+                                    <a (click)="inventario()" class="btn btn-primary btn-user btn-block">
                                         Login
                                     </a>
                                 </form>
