Pagina crear ususario

--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -33,7 +33,7 @@
                                     <a class="small" href="forgot-password.html">Olvido su contraseña?</a>
                                 </div>
                                 <div class="text-center">
-                                    <a class="small" href="register.html">Crear Cuenta!</a>
+                                    <a class="small" (click)="crearUsuario()">Crear Cuenta!</a>
                                 </div>
                             </div>
                         </div>
