Instalacion de libreria swiper

--- a/src/app/pages/contacto/contacto.component.html
+++ b/src/app/pages/contacto/contacto.component.html
@@ -8,6 +8,9 @@
         </div>
     </div>
 </div>
+<div class="container-fluid">
+    mapa
+</div>
 <div class="container mt-5 mb-4">
     <h1 class="text-center">Contáctanos</h1>
     <div class="row">
