--- a/src/app/pages/inventario/inventario.component.html
+++ b/src/app/pages/inventario/inventario.component.html
@@ -1,1 +1,17 @@
 <p>inventario works!</p>
+<div class="swiper-container">
+    <div class="swiper-wrapper">
+      <!-- Tus diapositivas van aquí -->
+      <div class="swiper-slide">Slide 1</div>
+      <div class="swiper-slide">Slide 2</div>
+      <div class="swiper-slide">Slide 3</div>
+    </div>
+  
+    <!-- Agrega la paginación (si lo deseas) -->
+    <div class="swiper-pagination"></div>
+  
+    <!-- Agrega la navegación (si lo deseas) -->
+    <div class="swiper-button-next"></div>
+    <div class="swiper-button-prev"></div>
+  </div>
+  
