--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,6 +2,7 @@
 //importaciones del font awesome
 @import "~font-awesome/css/font-awesome.css";
 
+@import 'swiper/swiper-bundle.css';
 .rojo {
     background-color: rgb(171, 105, 105);
 }
