--- a/src/app/pages/inventario/inventario.component.html
+++ b/src/app/pages/inventario/inventario.component.html
@@ -1,17 +1,66 @@
-<p>inventario works!</p>
-<div class="swiper-container">
+<!-- <div class="swiper-container">
     <div class="swiper-wrapper">
-      <!-- Tus diapositivas van aquí -->
+       Tus diapositivas van aquí
       <div class="swiper-slide">Slide 1</div>
       <div class="swiper-slide">Slide 2</div>
       <div class="swiper-slide">Slide 3</div>
     </div>
   
-    <!-- Agrega la paginación (si lo deseas) -->
+     Agrega la paginación (si lo deseas) 
     <div class="swiper-pagination"></div>
   
-    <!-- Agrega la navegación (si lo deseas) -->
+  Agrega la navegación (si lo deseas)
     <div class="swiper-button-next"></div>
     <div class="swiper-button-prev"></div>
+  </div> -->
+<nav class="navbar navbar-expand-lg navbar-light rojo fixed-top">
+  <div class="container">
+    <a class="navbar-brand">
+      <img src="../../../assets/img/logo.jpg" alt="..." width="30" height="30"><span class="blanco">CPMT</span></a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
+      aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav ml-auto">
+        <li class="nav-item active cursor_pointer">
+          <a class="nav-link">
+            <span class="blanco"> logout</span></a>
+        </li>
+      </ul>
+    </div>
   </div>
-  
+</nav>
+<div class="mt-2">
+  <span>h</span>
+</div>
+<div class="text-center mt-5">
+  <p>INVENTARIO</p>
+</div>
+<div class="container text-center">
+  <button class="btn" (click)="inventario()">Inventario</button>
+  <button class="btn" (click)="ventas()">Ventas</button>
+  <button class="btn">Agregar</button>
+</div>
+<div class="container-fluid mt-3">
+  <div class="row">
+    <div class="col-sm-6">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">Special title treatment</h5>
+          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+    </div>
+    <div class="col-sm-6">
+      <div class="card">
+        <div class="card-body">
+          <h5 class="card-title">Special title treatment</h5>
+          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
+          <a href="#" class="btn btn-primary">Go somewhere</a>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
