--- a/src/app/pages/contacto/contacto.component.html
+++ b/src/app/pages/contacto/contacto.component.html
@@ -8,8 +8,8 @@
         </div>
     </div>
 </div>
-<div class="container-fluid">
-    mapa
+<div class="container-fluid mt-4">
+    <div id="map" style="width: 100%; height: 500px;"></div>
 </div>
 <div class="container mt-5 mb-4">
     <h1 class="text-center">Contáctanos</h1>
