--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,7 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 //importaciones del font awesome
 @import "~font-awesome/css/font-awesome.css";
-
+@import 'leaflet/dist/leaflet.css';
 @import 'swiper/swiper-bundle.css';
 .rojo {
     background-color: rgb(171, 105, 105);
