--- a/src/app/pages/inventario/inventario.component.html
+++ b/src/app/pages/inventario/inventario.component.html
@@ -24,23 +24,23 @@
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav ml-auto">
         <li class="nav-item active cursor_pointer">
-          <a class="nav-link">
+          <a class="nav-link" (click)="logout()">
             <span class="blanco"> logout</span></a>
         </li>
       </ul>
     </div>
   </div>
 </nav>
-<div class="mt-2">
-  <span>h</span>
+<div class="mt-1">
+  <span>.</span>
 </div>
-<div class="text-center mt-5">
-  <p>INVENTARIO</p>
+<div class="container">
+  <h1 class="mt-5 mb-3 text-center">Inventario</h1>
 </div>
 <div class="container text-center">
   <button class="btn" (click)="inventario()">Inventario</button>
   <button class="btn" (click)="ventas()">Ventas</button>
-  <button class="btn">Agregar</button>
+  <button class="btn" (click)="agregar()">Agregar</button>
 </div>
 <div class="container-fluid mt-3">
   <div class="row">
