--- a/src/app/pages/ventas/ventas.component.html
+++ b/src/app/pages/ventas/ventas.component.html
@@ -17,14 +17,14 @@
         </div>
     </div>
 </nav>
-<div class="mt-2">
-    <span>h</span>
-</div>
-<div class="text-center mt-5">
-    <p>VENTAS</p>
+<div class="mt-1">
+    <span>.</span>
+  </div>
+<div class="container">
+    <h1 class="mt-5 mb-3 text-center">Ventas</h1>
 </div>
 <div class="container text-center">
     <button class="btn" (click)="inventario()">Inventario</button>
     <button class="btn" (click)="ventas()">Ventas</button>
-    <button class="btn">Agregar</button>
+    <button class="btn" (click)="agregar()">Agregar</button>
 </div>
