--- a/src/app/pages/productos/productos.component.html
+++ b/src/app/pages/productos/productos.component.html
@@ -8,67 +8,44 @@
       </div>
   </div>
 </div>
-<div class="container mb-4">
+<div class="container mb-4 mt-3">
   <div class="row row-cols-1 row-cols-md-3 g-4">
     <div class="col">
       <div class="card">
-        <img src="..." class="card-img-top" alt="...">
+        <img src="ruta-de-imagen-1.jpg" class="card-img-top" alt="Manzana 1">
         <div class="card-body">
-          <h5 class="card-title">Producto</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
-            content. This content is a little bit longer.</p>
+          <h5 class="card-title">Manzana Roja</h5>
+          <p>Descripcion</p>
+          <p class="card-text">Precio: $1.99 por kg</p>
+          <p class="card-text">En Stock: 50 kg</p>
+          <button class="btn btn-primary">Comprar</button>
         </div>
       </div>
     </div>
     <div class="col">
       <div class="card">
-        <img src="..." class="card-img-top" alt="...">
+        <img src="ruta-de-imagen-2.jpg" class="card-img-top" alt="Manzana 2">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
-            content. This content is a little bit longer.</p>
+          <h5 class="card-title">Manzana Verde</h5>
+          <p>Descripcion</p>
+          <p class="card-text">Precio: $2.49 por kg</p>
+          <p class="card-text">En Stock: 30 kg</p>
+          <button class="btn btn-primary">Comprar</button>
         </div>
       </div>
     </div>
     <div class="col">
       <div class="card">
-        <img src="..." class="card-img-top" alt="...">
+        <img src="ruta-de-imagen-3.jpg" class="card-img-top" alt="Manzana 3">
         <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
-            content.</p>
+          <h5 class="card-title">Manzana Amarilla</h5>
+          <p>Descripcion</p>
+          <p class="card-text">Precio: $2.99 por kg</p>
+          <p class="card-text">En Stock: 40 kg</p>
+          <button class="btn btn-primary">Comprar</button>
         </div>
       </div>
     </div>
-    <div class="col">
-      <div class="card">
-        <img src="..." class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
-            content. This content is a little bit longer.</p>
-        </div>
-      </div>
-    </div>
-    <div class="col">
-      <div class="card">
-        <img src="..." class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
-            content. This content is a little bit longer.</p>
-        </div>
-      </div>
-    </div>
-    <div class="col">
-      <div class="card">
-        <img src="..." class="card-img-top" alt="...">
-        <div class="card-body">
-          <h5 class="card-title">Card title</h5>
-          <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional
-            content. This content is a little bit longer.</p>
-        </div>
-      </div>
-    </div>
+    <!-- Puedes agregar más tarjetas aquí con información de otras variedades de manzanas -->
   </div>
 </div>
