--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -14,20 +14,18 @@
                                 <div class="text-center">
                                     <h1 class="h4 text-gray-900 mb-4">Bienvenido</h1>
                                 </div>
-                                <form class="user">
+                                <form [formGroup]="loginForm" (ngSubmit)="onLogin()">
+                                    <!-- Contenido del formulario -->
                                     <div class="form-group">
-                                        <input type="email" class="form-control form-control-user"
-                                            id="exampleInputEmail" aria-describedby="emailHelp"
-                                            placeholder="Usuario">
+                                      <input type="text" class="form-control form-control-user" formControlName="usuario" id="usuario"
+                                        aria-describedby="emailHelp" placeholder="Correo">
                                     </div>
                                     <div class="form-group">
-                                        <input type="password" class="form-control form-control-user"
-                                            id="exampleInputPassword" placeholder="Password">
+                                      <input type="password" class="form-control form-control-user" formControlName="contrasenia"
+                                        id="contrasenia" placeholder="Contraseña">
                                     </div>
-                                    <a (click)="inventario()" class="btn btn-primary btn-user btn-block">
-                                        Login
-                                    </a>
-                                </form>
+                                    <button type="submit" class="btn btnRojo btn-user btn-block">Entrar</button>
+                                  </form>                                  
                                 <hr>
                                 <div class="text-center">
                                     <a class="small" href="forgot-password.html">Olvido su contraseña?</a>
