--- a/src/styles.scss
+++ b/src/styles.scss
@@ -34,3 +34,10 @@
     justify-content: center;
     align-items: center;
 }
+
+.message-container {
+    position: fixed;
+    bottom: 20px;
+    right: 20px;
+  }
+  
