--- a/src/app/pages/agregar/agregar.component.html
+++ b/src/app/pages/agregar/agregar.component.html
@@ -29,28 +29,36 @@
     <button class="btn" (click)="agregar()">Agregar</button>
 </div>
 <div class="container">
-    <form>
+    <form [formGroup]="formulario" (ngSubmit)="submitForm()" enctype="multipart/form-data">
         <div class="row mb-3">
             <div class="col">
                 <label for="nombre" class="form-label">Nombre del Producto</label>
-                <input type="text" class="form-control" id="nombre" placeholder="Nombre del producto">
+                <input type="text" formControlName="nombre" class="form-control" id="nombre" placeholder="Nombre del producto">
             </div>
             <div class="col">
                 <label for="precio" class="form-label">Precio</label>
-                <input type="number" class="form-control" id="precio" placeholder="Precio del producto">
+                <input type="number" class="form-control" formControlName="precio" id="precio" placeholder="Precio del producto">
             </div>
         </div>
         <div class="mb-3">
             <label for="descripcion" class="form-label">Descripción</label>
-            <textarea class="form-control" id="descripcion" rows="4" placeholder="Descripción del producto"></textarea>
+            <textarea class="form-control" formControlName="descripcion" id="descripcion" rows="4" placeholder="Descripción del producto"></textarea>
         </div>
         <div class="mb-3">
-            <label for="imagen" class="form-label">Imagen del Producto</label>
-            <input type="file" class="form-control" id="imagen">
+            <label for="foto" class="form-label">Imagen del Producto</label>
+            <input (change)="onFileSelect($event.target)" type="file" class="form-control">
         </div>
         <div class="mb-3">
             <label for="stock" class="form-label">Stock</label>
-            <input type="number" class="form-control" id="stock" placeholder="Cantidad en stock">
+            <input type="number" class="form-control" formControlName="stock" id="stock" placeholder="Cantidad en stock">
+        </div>
+        <div class="mb-3">
+            <label for="nivel" class="form-label">Nivel de Madurez</label>
+            <input type="text" class="form-control" formControlName="nivel" id="nivel" placeholder="Nivel de Madurez">
+        </div>
+        <div class="mb-3">
+            <label for="estatus" class="form-label">Estatus</label>
+            <input type="text" class="form-control" formControlName="estatus" id="estatus" placeholder="estatus 1 0 2">
         </div>
         <button type="submit" class="btn btn-primary">Registrar Producto</button>
     </form>
