--- a/src/app/pages/agregar-actividad/agregar-actividad.component.html
+++ b/src/app/pages/agregar-actividad/agregar-actividad.component.html
@@ -21,25 +21,19 @@
     <span>.</span>
   </div>
 <div class="container">
-    <h1 class="mt-5 mb-3 text-center">Ventas</h1>
+    <h1 class="mt-5 mb-3 text-center">Agregar Actividad</h1>
 </div>
 <div class="container text-center mb-3">
     <div class="row">
       <div class="col">
-        <button class="btn btn-rojo" (click)="inventario()">Inventario</button>
+        <button class="btn" (click)="inventario()">Inventario</button>
       </div>
       <div class="col">
-        <button class="btn btn-rojo" (click)="inventario()">Actividades</button>
-      </div>
-      <div class="col">
-        <button class="btn btn-rojo" (click)="inventario()">Eventos</button>
-      </div>
-      <div class="col">
-      <button class="btn btn-rojo" (click)="ventas()">Ventas</button>
+      <button class="btn" (click)="ventas()">Ventas</button>
       </div>
       <div class="col">
         <div class="dropdown-center">
-          <button class="btn btn-rojo dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
+          <button class="btn btn-secondary dropdown-toggle" type="button" data-bs-toggle="dropdown" aria-expanded="false">
             Agregar
           </button>
           <ul class="dropdown-menu">
@@ -53,31 +47,5 @@
     </div>
 </div>
 <div class="container">
-    <table class="table table-striped">
-        <thead>
-          <tr>
-            <th scope="col">#</th>
-            <th scope="col">Usuario</th>
-            <th scope="col">Liberar Pedido</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <th scope="row">1</th>
-            <td>Mark</td>
-            <button type="button" class="btn" (click)="liberar()">Liberar</button>
-
-          </tr>
-          <tr>
-            <th scope="row">2</th>
-            <td>Jacob</td>
-            <button type="button" class="btn" (click)="liberar()">Liberar</button>
-          </tr>
-          <tr>
-            <th scope="row">3</th>
-            <td>Larry the Bird</td>
-            <button type="button" class="btn" (click)="liberar()">Liberar</button>
-          </tr>
-        </tbody>
-      </table>
+    Aqui formulario
 </div>
