--- a/src/styles.scss
+++ b/src/styles.scss
@@ -39,5 +39,14 @@
     position: fixed;
     bottom: 20px;
     right: 20px;
-  }
+}
+
+.btn-rojo {
+    background-color: #AB6969;
+    color: #fff;
+}
+
+.btn-rojo:hover {
+    color: #353535;
+}
   
