Avences para el admin

--- a/src/app/pages/agregar-productor/agregar-productor.component.html
+++ b/src/app/pages/agregar-productor/agregar-productor.component.html
@@ -2,7 +2,7 @@
     <span>.</span>
   </div>
 <div class="container">
-    <h1 class="mt-5 mb-3 text-center">Agregar Actividad</h1>
+    <h1 class="mt-5 mb-3 text-center">Agregar Productor</h1>
 </div>
 <div class="container">
     Aqui formulario
