--- a/src/app/components/nav/nav.component.html
+++ b/src/app/components/nav/nav.component.html
@@ -10,25 +10,25 @@
         <div class="collapse navbar-collapse" id="navbarNav">
             <ul class="navbar-nav ml-auto">
                 <li class="nav-item active cursor_pointer">
-                    <a class="nav-link" (click)="inventario()"><i class="blanco fa-solid fa-box"></i>
+                    <a class="nav-link" (click)="inventario()"><i class="blanco fa fa-archive"></i>
                         <span class="blanco"> Inventario</span></a>
                 </li>
                 <li class="nav-item cursor_pointer">
-                    <a class="nav-link" (click)="actividades()"><i class="blanco fa fa-tags"></i>
+                    <a class="nav-link" (click)="actividades()"><i class="blanco fa fa-calendar-check-o"></i>
                         <span class="blanco"> Actividades</span></a>
                 </li>
                 <li class="nav-item cursor_pointer">
-                    <a class="nav-link" (click)="eventos()"><i class="blanco fa fa-envelope"></i>
+                    <a class="nav-link" (click)="eventos()"><i class="blanco fa fa-bicycle"></i>
                         <span class="blanco"> Eventos</span></a>
                 </li>
                 <li class="nav-item cursor_pointer">
-                    <a class="nav-link" (click)="ventas()"><i class="blanco fa fa-list"></i>
+                    <a class="nav-link" (click)="ventas()"><i class="blanco fa fa-line-chart"></i>
                         <span class="blanco"> Ventas</span></a>
                 </li>
                 <li class="nav-item dropdown">
                     <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown"
-                        aria-expanded="false">
-                        Agregar
+                        aria-expanded="false" style="color: white;"><i class="blanco fa fa-plus-square"></i>
+                         Agregar
                     </a>
                     <ul class="dropdown-menu">
                         <li><a class="dropdown-item" (click)="agregarProducto()">Producto</a></li>
