--- a/src/app/pages/productos/productos.component.html
+++ b/src/app/pages/productos/productos.component.html
@@ -13,8 +13,7 @@
     <ng-container *ngFor="let aux of lista">
       <div class="col">
         <div class="card">
-          <!-- cambiar el de abajo por aux.nombreCorto -->
-          <img [src]="'http://localhost:8080/image/' + nombreImagen" class="card-img-top" alt="...">
+          <img [src]="'http://localhost:8080/image/' + obtenerNombreImagen(aux.foto)" class="card-img-top" alt="...">
           <div class="card-body">
             <h5 class="card-title">{{ aux.nombre }}</h5>
             <p>{{ aux.descripcion }}</p>
