--- a/src/app/layoutad/layout-admin/layout-admin.component.html
+++ b/src/app/layoutad/layout-admin/layout-admin.component.html
@@ -1,7 +1,7 @@
 <div  id="wrapper">
     <div id="content-wrapper" class="d-flex flex-column">
         <app-nav></app-nav>
-        <div>
+        <div style="background-color: #fff;">
             <router-outlet></router-outlet>
         </div>
     </div>
