--- a/src/app/pages/inventario/inventario.component.html
+++ b/src/app/pages/inventario/inventario.component.html
@@ -19,25 +19,29 @@
 <div class="container">
   <h1 class="mt-5 mb-3 text-center">Inventario</h1>
 </div>
-<div class="container-fluid mt-3">
-  <div class="row">
-    <div class="col-sm-6">
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">Special title treatment</h5>
-          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
-        </div>
-      </div>
-    </div>
-    <div class="col-sm-6">
-      <div class="card">
-        <div class="card-body">
-          <h5 class="card-title">Special title treatment</h5>
-          <p class="card-text">With supporting text below as a natural lead-in to additional content.</p>
-          <a href="#" class="btn btn-primary">Go somewhere</a>
-        </div>
-      </div>
-    </div>
-  </div>
+<div class="container mt-3">
+  <table class="table table-hover">
+    <thead>
+      <tr class="text-center">
+        <th>#</th>
+        <th>Nombre</th>
+        <th>Estatus</th>
+        <th>Precio</th>
+        <th>Stock</th>
+        <th>Actualizar</th>
+      </tr>
+    </thead>
+    <tbody>
+      <tr *ngFor="let list of lista" class="text-center">
+        <th>{{ list.id }}</th>
+        <th>{{ list.nombre }}</th>
+        <td>{{ list.estatus }}</td>
+        <td>{{ list.precio }}</td>
+        <td>{{ list.stock }}</td>
+        <td>
+          <button class="btn btn-rojo">Actualizar</button>
+        </td>
+      </tr>
+    </tbody>
+  </table>
 </div>
