--- a/src/app/pages/login/login.component.html
+++ b/src/app/pages/login/login.component.html
@@ -26,14 +26,11 @@
                                         <input type="password" class="form-control form-control-user"
                                             formControlName="contrasenia" id="contrasenia" placeholder="Contraseña">
                                     </div>
-                                    <button type="submit" class="btn btnRojo btn-user btn-block">Entrar</button>
+                                    <button type="submit" class="btn btn-rojo btn-user btn-block">Entrar</button>
                                 </form>
                                 <hr>
                                 <div class="text-center">
                                     <span class="label"><i>{{ mensajeError}}</i></span>
-                                </div>
-                                <div class="text-center">
-                                    <a class="small" href="forgot-password.html">Olvido su contraseña?</a>
                                 </div>
                                 <div class="text-center">
                                     <a class="small" (click)="crearUsuario()">Crear Cuenta!</a>
