--- a/src/app/pages/crear-usuario/crear-usuario.component.html
+++ b/src/app/pages/crear-usuario/crear-usuario.component.html
@@ -32,15 +32,11 @@
                             <div class="form-group">
                               <input type="text" class="form-control form-control-user" formControlName="phone" placeholder="Telefono">
                             </div>
-                            <button type="submit" class="btn btn-primary btn-user btn-block">Registrar</button>
+                            <button type="submit" class="btn btn-rojo btn-user btn-block">Registrar</button>
                           </form>
-                          
                         <hr>
                         <div class="text-center">
-                            <a class="small" href="forgot-password.html">Forgot Password?</a>
-                        </div>
-                        <div class="text-center">
-                            <a class="small" [routerLink]="['/login']">Ya tienes una cuenta? Acceder!</a>
+                            <a class="small" [routerLink]="['/login']">Ya tienes una cuenta? Accede!</a>
                         </div>
                     </div>
                 </div>
